--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -109,6 +109,8 @@
             background: rgba(0,180,0,0.5); border-radius: 50%;
         }
         .square.legal-capture { box-shadow: inset 0 0 0 3px rgba(0,180,0,0.6); }
+        .square.player-threat { background: rgba(255,140,0,0.5) !important; }
+        .square.opponent-vulnerable { background: rgba(144,238,144,0.4) !important; }
         .piece-white { color: #FFFFFF; -webkit-text-stroke: 1px #333333; paint-order: stroke fill; }
         .piece-black { color: #333333; -webkit-text-stroke: 1px #333333; }
         .square.ghost-highlight { background: rgba(0,170,255,0.3) !important; }
@@ -318,6 +320,11 @@
         <div class="toggle-row">
             <span>Speech commentary</span>
             <input type="checkbox" data-testid="speech-toggle" id="speech-toggle">
+        </div>
+
+        <div class="toggle-row">
+            <span>Show pieces under threat</span>
+            <input type="checkbox" data-testid="threats-toggle" id="threats-toggle">
         </div>
 
         <div class="option-group" id="difficulty-options">
